Fix content height cutoff
Change to min-height to do it.

--- a/src/style.css
+++ b/src/style.css
@@ -63,5 +63,5 @@ h6 {
   flex-flow: column nowrap;
   justify-content: center;
   align-content: center;
-  height: 100vh;
+  min-height: 100vh;
 }
